Test that all pages have valid internal links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
       <div class="text-center">
         <a href="/">
           <img src="/static/logo.png" style="height: 46px; width: 152px;">
+          <span>Fedora Developer Portal</span>
         </a>
       </div>
     </div>
