--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
         <h3 class="widget-title">About</h3>
         <div class="widget-body">
           <dl>
+            <dd><a href="/about.html">About Developer Portal</a></dd>
             <dd><a href="//getfedora.org/en/sponsors">About Fedora</a></dd>
             <dd><a href="//getfedora.org/en/sponsors">Sponsors</a></dd>
             <dd><a href="http://fedoramagazine.org">Fedora Magazine</a></dd>
