--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,10 +83,20 @@
 .entries {
   position: absolute;
   background: white;
-  top: 55px;
+  color: black;
+  border: 1px solid $grey-color-light;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top: 0;
+  padding: 5px;
+  top: 35px;
   left: 0px;
   right: 0px;
   z-index: 10;
+}
+.entries p {
+  padding: 0;
+  margin: 0;
 }
 
 /***
