Fix: search-results should not be within <form>

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,10 +89,10 @@
   border-bottom-left-radius: 5px;
   border-top: 0;
   padding: 5px;
-  top: 35px;
-  left: 0px;
-  right: 0px;
+  top: 45px;
+  left: 15px;
   z-index: 10;
+  width: 288px;
 }
 .entries p {
   padding: 0;
