--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -1,10 +1,10 @@
-<div class="container banner" id="devassistant">
-  <div class="container">	
+<div class="container headlines" id="devassistant">
+  <div class="container">
   <div class="row">
     <div class="col-sm-5">
 	  <img src="/static/img/banners/banner_devassistant.png">
     </div>
-    <div class="col-sm-7 banner-body">
+    <div class="col-sm-7 headlines-body">
       <h2>Start developing with ease.</h2>
       <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
       <p><a href="#">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
