--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -49,7 +49,7 @@
     <div class="col-sm-2">
       {% include search.html %}
     </div>
-  <div class="row" id="banner">
+  <div class="row" id="headlines">
 	  <div class="col-sm-12">
 		<h2>The developer workstation you've been waiting for.</h2>
 		<p>From mobile apps to web; from desktop GUIs to CLI tools. Create it all easily with Fedora.</p>
@@ -58,7 +58,7 @@
   <div class="row" id="attribution">
     <div class="col-sm-12">
       <a href="https://www.flickr.com/photos/duald/7423940266/">Union Station Abstract</a> by <a href="https://www.flickr.com/photos/duald/">DualD FlipFlop</a> on Flickr, CC-BY-2.0
-</div>
+    </div>
     </div>
   </div>
 </div>
