--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -7,7 +7,7 @@
     <div class="col-sm-7 headlines-body">
       <h2>Start developing with ease.</h2>
       <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
-      <p><a href="#">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+      <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
     </div>
   </div>
   </div>
