Make the header responsive

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -7,8 +7,8 @@
       <div class="container">
         <div class="row">
           <div style="width: 500px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 22px;">
-            <form class="input-group" id="search" action="/search.html" method="get">
-              <input type="text" id="search-query" class="form-control" name="q" placeholder="Search" autocomplete="off">
+            <form class="input-group" id="search" action="/search.html" method="get" style="position: relative; width: auto;">
+              <input type="text" id="search-query" class="form-control" name="q" placeholder="Search" autocomplete="off" style="position: relative;">
               <span class="input-group-btn">
                 <button class="btn btn-default glyphicon glyphicon-search" type="submit" aria-hidden="true"></button>
               </span>
