--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -473,7 +473,7 @@ h3 a, h3 a:visited {
   background-repeat: repeat;
   color: white;
   width: 100% !important;
-  padding: 22px 65px;
+  padding: 22px 0;
   padding-bottom: 80px !important;
   margin-bottom: -80px;
 }
