--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -6,7 +6,7 @@
     <div class="title container" id="{{ page.section }}">
       <div class="container">
         <div class="row">
-          <div style="width: 500px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 22px;">
+          <div id="headline-search">
             <form class="input-group" id="search" action="/search.html" method="get" style="position: relative; width: auto;">
               <input type="text" id="search-query" class="form-control" name="q" placeholder="Search" autocomplete="off" style="position: relative;">
               <span class="input-group-btn">
