--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -132,6 +132,11 @@
   margin-top: 10px !important;
 }
 
+// Search box on the search page
+#headline-search {
+  width: 500px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 22px;
+}
+
 #headlines > div {
   margin-left: auto;
   margin-right: auto;
