make carousel work

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -1,14 +1,83 @@
-<div class="container headlines" id="devassistant">
-  <div class="container">
-  <div class="row">
-    <div class="col-sm-5">
-	  <img src="/static/img/banners/banner_devassistant.png">
+
+<div class="row text-center">
+     <div id="myFedoraPortal" class="carousel slide" data-ride="carousel" >
+         <ol class="carousel-indicators">
+         <li data-target="#myFedoraPortal" data-slide-to="0" class="active"></li>
+         <li data-target="#myFedoraPortal" data-slide-to="1"></li>
+         <li data-target="#myFedoraPortal" data-slide-to="2"></li>
+         </ol>
+ <!-- Wrapper for slides -->
+         <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <div class="container headlines" id="devassistant">
+                  <div class="container">
+                  <div class="row">
+                    <div class="col-xs-1 visible-xs headlines-body">
+                    </div>
+                    <div class="col-md-5 col-sm-6 col-xs-10">
+                          <img src="/static/img/banners/banner_devassistant.png">
+                    </div>
+                    <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+                      <h2>Start developing with ease.</h2>
+                      <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
+                      <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+                    </div>
+                    <div class="col-xs-1 headlines-body">
+                    </div>
+                  </div>
+                  </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="container headlines" id="devassistant">
+                  <div class="container">
+                  <div class="row">
+                    <div class="col-xs-1 visible-xs headlines-body">
+                    </div>
+                    <div class="col-md-5 col-sm-6 col-xs-10">
+                          <img src="/static/img/banners/banner_vagrant.png">
+                    </div>
+                    <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+                      <h2>Easy development environment.</h2>
+                      <p>Create reproducible and portable development environments that can be easily shared in your team.</p>
+                      <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+                    </div>
+                    <div class="col-xs-1 headlines-body">
+                    </div>
+                  </div>
+                  </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="container headlines" id="devassistant">
+                  <div class="container">
+                  <div class="row">
+                    <div class="col-xs-1 visible-xs headlines-body">
+                    </div>
+                    <div class="col-md-5 col-sm-6 col-xs-10">
+                          <img src="/static/img/banners/banner_docker.png">
+                    </div>
+                    <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+                      <h2>Make your app run everywhere.</h2>
+                      <p>Docker is an open platform for building, shipping and running distributed applications.</p>
+                      <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+                    </div>
+                    <div class="col-xs-1 headlines-body">
+                    </div>
+                  </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+  
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myFedoraPortal" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myFedoraPortal" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <div class="col-sm-7 headlines-body">
-      <h2>Start developing with ease.</h2>
-      <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
-      <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
-    </div>
-  </div>
-  </div>
-</div>
+
