--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -460,10 +460,10 @@ h3 a, h3 a:visited {
   width: 100% !important;
   margin-left: 0;
   margin-right: 0;
-  height: 240px;
+  //min-height: 240px;
 
   .headlines-body {
-    padding: 32px 5px 24px 5px;
+    padding: 32px 5px 44px 5px;
   }
 
   img {
