Disable features section as its not implemented

--- a/_includes/blog-features.html
+++ b/_includes/blog-features.html
@@ -1,3 +1,4 @@
+<!-- Features that are currently not implemented
 <div class="container" id="blog-features">
   <div class="row">
     <article class="col-sm-6 feature-article">
@@ -18,3 +19,4 @@
     </article>
   </div>
 </div>
+-->
