Fix: remove .row class to remove the horizontal scrollbar

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -1,4 +1,4 @@
-<div class="row text-center">
+<div class="text-center">
    <div id="myFedoraPortal" class="carousel slide" data-ride="carousel" >
      <ol class="carousel-indicators">
        <li data-target="#myFedoraPortal" data-slide-to="0" class="active"></li>
@@ -14,7 +14,7 @@
               <div class="col-md-5 col-sm-6 col-xs-15">
                 <img src="/static/img/banners/banner_devassistant.png">
               </div>
-              <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+              <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Start developing with ease.</h2>
                 <p>DevAssistant can help you set up your development environment, publish your code, and do many of the chores that somehow keep you from the important stuff - writing your software.</p>
                 <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
@@ -27,10 +27,12 @@
           <div class="container headlines" id="devassistant">
             <div class="container">
             <div class="row">
+              <div class="col-xs-1 visible-xs headlines-body">
+              </div>
               <div class="col-md-5 col-sm-6 col-xs-15">
                 <img src="/static/img/banners/banner_vagrant.png">
               </div>
-              <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+              <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Easy development environment.</h2>
                 <p>Create reproducible and portable development environments that can be easily shared in your team.</p>
                 <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
@@ -46,7 +48,7 @@
               <div class="col-md-5 col-sm-6 col-xs-15">
                 <img src="/static/img/banners/banner_docker.png">
               </div>
-              <div class="col-md-6 col-sm-5 col-xs-10 headlines-body">
+              <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Make your app run everywhere.</h2>
                 <p>Docker is an open platform for building, shipping and running distributed applications.</p>
                 <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
