--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -35,7 +35,7 @@
               <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Easy development environment.</h2>
                 <p>Create reproducible and portable development environments that can be easily shared in your team.</p>
-                <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+                <p><a href="/tools/vagrant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
               </div>
             </div>
             </div>
@@ -51,7 +51,7 @@
               <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Make your app run everywhere.</h2>
                 <p>Docker is an open platform for building, shipping and running distributed applications.</p>
-                <p><a href="/tools/devassistant/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+                <p><a href="/tools/docker/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
               </div>
             </div>
             </div>
