Rename the section to Languages & databases

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
       <a href="/tools.html">Get tools</a>
     </li>
     <li class="{% if page.highlight_section == "tech" %} active {%endif%}">
-      <a href="/tech.html">Technology overview</a>
+      <a href="/tech.html">Languages &amp; databases</a>
     </li>
     <li class="{% if page.highlight_section == "deployment" %} active {%endif%}">
       <a href="/deployment.html">Deploy and distribute</a>
