--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -6,7 +6,7 @@
 	<div class="title container" id="{{ page.category-name }}">
 	  <div class="container">
 		<div class="row">
-		  <div class="col-sm-6" id="page-title">
+		  <div class="col-sm-6">
 			<h1>{{ page.title }}</h1>
 		  </div>
 		  <div class="col-sm-6" id="page-description">
