Add virt-builder tool logo and related style changes

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -55,6 +55,22 @@
             </div>
           </div>
         </div>
+        <div class="item">
+          <div class="container headlines" id="devassistant">
+            <div class="container">
+            <div class="row">
+              <div class="col-md-5 col-sm-6 col-xs-15">
+                <img src="/static/img/banners/banner_virt-builder.png">
+              </div>
+              <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
+                <h2>Build virtual machine images quickly.</h2>
+                <p>Docker is an open platform for building, shipping and running distributed applications.</p>
+                <p><a href="/tools/virt-builder/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
     </div>
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myFedoraPortal" role="button" data-slide="prev">
