--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -88,6 +88,8 @@
               <a href="//ask.fedoraproject.org/en/questions/scope:all/sort:age-desc/tags:vagrant/page:1/">Ask Fedora.</a>
             {% elsif page.page == 'docker' %}
               <a href="//ask.fedoraproject.org/en/questions/scope:all/sort:age-desc/tags:docker/page:1/">Ask Fedora.</a>
+            {% elsif page.page == 'virt-builder' %}
+              <a href="//ask.fedoraproject.org/en/questions/scope:all/sort:age-desc/tags:virt-builder/page:1/">Ask Fedora.</a>
             {% elsif page.page == 'devassistant' %}
               <a href="//ask.fedoraproject.org/en/questions/scope:all/sort:age-desc/tags:devassistant/page:1/">Ask Fedora.</a>
             {% else %}
