banners.html: Fix description of `virt-builder`

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -64,7 +64,7 @@
               </div>
               <div class="col-md-6 col-sm-5 col-xs-11 headlines-body">
                 <h2>Build virtual machine images quickly.</h2>
-                <p>Docker is an open platform for building, shipping and running distributed applications.</p>
+                <p>Virt-builder is a tool for quickly building (and customizing) virtual machines.</p>
                 <p><a href="/tools/virt-builder/about.html">Learn more <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a></p>
               </div>
             </div>
