Fix carousel to include the 4. item

--- a/_includes/banners.html
+++ b/_includes/banners.html
@@ -4,6 +4,7 @@
        <li data-target="#myFedoraPortal" data-slide-to="0" class="active"></li>
        <li data-target="#myFedoraPortal" data-slide-to="1"></li>
        <li data-target="#myFedoraPortal" data-slide-to="2"></li>
+       <li data-target="#myFedoraPortal" data-slide-to="3"></li>
      </ol>
      <!-- Wrapper for slides -->
      <div class="carousel-inner" role="listbox">
