new design almost complete

--- a/_includes/header-front.html
+++ b/_includes/header-front.html
@@ -8,7 +8,8 @@
 </div>
 </div>
 
-<div class="container" id="splash">
+<div id="splash">
+  <div class="container">
   <div class="row" id="top">
     <div class="col-sm-2" id="logo-col">
       <div class="text-center">
@@ -20,10 +21,10 @@
         </h1>
       </div>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-7" id="menu-col">
       {% include nav.html %}
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3" id="search-col">
       {% include search.html %}
     </div>
   <div class="row" id="headlines">
@@ -37,5 +38,6 @@
       <a href="https://www.flickr.com/photos/duald/7423940266/">Union Station Abstract</a> by <a href="https://www.flickr.com/photos/duald/">DualD FlipFlop</a> on Flickr, CC-BY-2.0
     </div>
     </div>
+  </div>
   </div>
 </div>
