--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,11 +1,13 @@
----
-layout: layout
----
 <!DOCTYPE html>
 <html>
   {% include head.html %}
   <body>
-    {% include header-front.html %}
+    <div id="splash">
+      <div class="container">
+        {% include top-nav.html %}
+        {% include jumbo-homepage.html %}
+      </div>
+    </div>
     <div class="container">
       {{ content }}
     </div>
