--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,38 +21,213 @@
 #logo-col a span {
   display: none;
 }
+// #############################################################################
+// ###   general stuff   #######################################################
+// #############################################################################
 
-/* Splash gradient background */
-#splash, .title {
-  background: rgb(60, 109, 179) !important;
-  background: -moz-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
-  background: -webkit-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
-  background: -o-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
-  background: -ms-linear-gradient(90deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
-  background: linear-gradient(180deg, rgb(60, 109, 179) 18%, rgb(50, 86, 145) 99%);
-  background-image: url('/static/img/titles/title_front.png') !important;
+body {
+  background-color: #e6e6e6!important;
+}
+
+// #############################################################################
+// ###   splash   ##############################################################
+// #############################################################################
+#splash{
+  background-color: #2c5aa0;
   background-size: cover !important;
 
-  /* this is esentially h2 for the tile page, h1 otherwise */
-  h1, h2 {
-    font-family: "Open Sans Semibold";
-    text-shadow: 0px 3px 1px rgba(37, 58, 102, 1);
+  h2 {
     color: white;
-    font-size: 30px;
+    padding-bottom: 0;
+    font-family: sans-serif;
   }
 
   p {
     color: white;
+    font-family: sans-serif;
+  }
+
+  img.img-rounded {
+    background-color: white;
+    padding: 6px;
+    width: 100px;
+    margin-top: 40px;
+    margin-right: 20px;
+    float: left;
   }
 }
 
-.title#start {   background-image: url('/static/img/titles/title_start.png') !important; }
-.title#tools {   background-image: url('/static/img/titles/title_tools.png') !important; }
-.title#tech {   background-image: url('/static/img/titles/title_tech.png') !important; }
-.title#deploy {
+// ###   splash sizes   ############
+.splash-size-large {
+  h2 {
+    font-size: 40px !important;
+    margin-top: 80px;
+  }
+  p {
+    font-size: 20px;
+    margin-bottom: 80px;
+  }
+}
+
+.splash-size-small {
+  h2 {
+    font-size: 30px !important;
+    margin-top: 60px;
+  }
+  p {
+    font-size: 15px;
+    margin-bottom: 60px;
+  }
+}
+
+// ###   splash pages   ############
+.splash-section-homepage {
+  background-image: url('/static/img/titles/title_front.png') !important;
+}
+
+.splash-section-start {
+  background-image: url('/static/img/titles/title_start.png') !important;
+}
+
+.splash-section-tools {
+  background-image: url('/static/img/titles/title_tools.png') !important;
+}
+
+.splash-section-tech {
+  background-image: url('/static/img/titles/title_tech.png') !important;
+}
+
+.splash-section-deploy {
   background-image: url('/static/img/titles/title_deploy.png') !important;
   background-position: right 20% !important;
 }
+
+
+// #############################################################################
+// ###   banners   #############################################################
+// #############################################################################
+#front-nav {
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  .panel {
+    padding: 20px;
+    text-align: left;
+    min-height: 220px;
+    margin-bottom: 0px;
+  }
+
+  img {
+    height: 50px;
+    margin-top: 10px;
+  }
+
+  p {
+    padding: 0;
+    margin: 0;
+  }
+
+  h3 {
+    padding-left: 0;
+    padding-top: 15px!important;
+    padding-bottom: 10px!important;
+  }
+}
+
+
+.banner-contribute {
+  background-color: white;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: sans-serif;
+
+  h2 {
+    color: #4d4d4d;
+    font-size: 30px!important;
+    padding-bottom: 0;
+    margin-top: 0px;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  a.btn-primary {
+    color: white;
+  }
+}
+
+
+div.content-menu {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+div.content-content {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: white;
+  padding: 20px;
+
+  h1 {
+    font-size: 30px!important;
+  }
+
+  h2 {
+    font-size: 24px!important;
+    padding-bottom: 0;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    color: #4d4d4d!important;
+    font-family: sans-serif;
+    padding-left: 0px;
+  }
+
+  :first-child {
+    margin-top: 0px;
+  }
+
+  p {
+    margin-left: 0px;
+    color: #111;
+  }
+}
+
+
+
+.section-content {
+  margin-bottom: 40px;
+  margin-top: 10px;
+
+  h2 {
+    color: #4d4d4d;
+    font-size: 30px!important;
+    padding-bottom: 0;
+    padding-top: 30px;
+  }
+
+  :first-child {
+    margin-top: 0px;
+  }
+}
+
+
+
+#menu-col, #search-col {
+  margin-top: 12px;
+}
+
+#attribution a {
+  color: white;
+  font-size: .9em
+}
+
+#attribution {
+  opacity: .3;
+}
+
+
 
 .title {
   height: 180px;
@@ -63,7 +238,7 @@
   padding-top: 20px;
   }
 
-  img.img-circle {
+  img.img-rounded {
     background-color: white;
     padding: 6px;
     width: 100px;
@@ -106,17 +281,6 @@
     padding-top: 15px;
     }
   }
-}
-
-
-#splash, .title, #header {
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-  width: 100% !important;
-}
-
-#splash {
-  min-height: 370px;
 }
 
 /***
@@ -185,30 +349,7 @@ body .nav li a:hover {
   width: 500px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 22px;
 }
 
-#headlines > div {
-  margin-left: auto;
-  margin-right: auto;
-}
 
-#headlines {
-  font-size: 1.5em;
-  text-align: center;
-  padding: 50px 100px;
-}
-
-#attribution {
-
-  padding-top: 40px;
-
-  a {
-    color: white;
-    font-size: .9em;
-  }
-}
-
-#attribution {
-  opacity: .3;
-}
 
 .site-header {
     border-top: 5px solid $grey-color-dark;
@@ -489,9 +630,7 @@ h3 a, h3 a:visited {
   font-weight: semibold;
 }
 
-#front-nav {
-  margin-top: 4em;
-}
+
 
 .headlines {
   width: 100% !important;
