--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,7 @@
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
   <link href="/css/main.css" rel="stylesheet" media="screen, print">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-<!--  <link href="/static/css/patternfly.min.css" rel="stylesheet" media="screen, print"> -->
-  <script src="/static/components/jquery/dist/jquery.min.js"></script>
-  <script src="/static/components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/static/components/datatables/media/js/jquery.dataTables.js"></script>
-  <script src="/static/js/patternfly.min.js"></script>
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 
   <!-- Site search -->
   <script src="/js/search.min.js" type="text/javascript" charset="utf-8"></script>
