--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   <body>
+  {% include announcement.html %}
 
     <!-- The top blue thing -->
     <div id="splash" class="splash-size-small splash-section-{{ page.category-name }}">
