--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -104,7 +104,7 @@ body {
   background-position: right 20% !important;
 }
 
-.splash-section-contribute {
+.splash-section-search, .splash-section-contribute {
   background-image: url('/static/img/titles/title_general.jpg') !important;
   background-position: right 60% !important;
 }
