--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   <body>
+    {% include announcement.html %}
 
     <!-- The top blue thing -->
     <div id="splash" class="splash-size-large splash-section-homepage">
