some more css fixes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -742,14 +742,13 @@ h2 {
   font-weight: normal !important;
   color: #337ab7;
   display: table-cell !important;
-  padding-top: 8px;
-  padding-left: 8px;
+  padding-top: 12px;
   padding-bottom: 10px;
   }
 
   p {
     color: #888;
-    margin-left: 10px;
+    //margin-left: 10px;
 
   }
 
