--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -33,6 +33,11 @@
               {% endif %}
             {% endfor %}
           </div>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              {% include ask_fedora.html %}
+            </div>
+          </div>
         </div>
         <div class="col-sm-9">
           <div class="panel panel-default content-content">
