Edit this page button

--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -34,10 +34,13 @@
             {% endfor %}
           </div>
           <div class="panel panel-default">
-            <div class="panel-body">
+            <div class="panel-body" style="padding-top:8px;padding-bottom:8px">
               {% include ask_fedora.html %}
             </div>
           </div>
+
+          <a href="https://github.com/developer-portal/content/blob/master/{{page.dir}}/{{page.name}}" class="btn btn-default">Edit this page</a>
+
         </div>
         <div class="col-sm-9">
           <div class="panel panel-default content-content">
