--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -164,6 +164,29 @@ body {
   }
 }
 
+.banner-fedora {
+  background-image: url('/static/img/blue-pattern.jpg');
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: sans-serif;
+
+  h2 {
+    color: #eee;
+    font-size: 30px!important;
+    padding-bottom: 0;
+    margin-top: 0px;
+  }
+
+  p {
+    color: #eee;
+    font-size: 15px;
+  }
+
+  a.btn-primary {
+    color: white;
+  }
+}
+
 
 div.content-menu {
   margin-top: 40px;
@@ -762,7 +785,7 @@ h2 {
   text-decoration: none !important;
 
   h3 {
-    text-decoration: underline;
+    //text-decoration: underline;
   }
 
   .panel-default {
